--- a/views/admin/adminClanarine.ejs
+++ b/views/admin/adminClanarine.ejs
@@ -402,7 +402,7 @@
             <!-- ============================================================== -->
             <footer class="footer text-center">
                 Сва права задржана<a href="https://wrappixel.com">
-    <b  style=" font-family: 'Maven Pro', sans-serif;" class="text-danger">ТодаБогдаВеб</b></a>.
+    <b  style=" font-family: 'Maven Pro', sans-serif;" class="text-danger">ТБВ-Веб</b></a>.
               </footer>
             <!-- ============================================================== -->
             <!-- End footer -->
