--- a/views/admin/adminCreateForm.ejs
+++ b/views/admin/adminCreateForm.ejs
@@ -251,7 +251,7 @@
         </div>
         <footer class="footer text-center">
             Сва права задржана<a href="https://wrappixel.com">
-<b  style=" font-family: 'Maven Pro', sans-serif;" class="text-danger">ТодаБогдаВеб</b></a>.
+<b  style=" font-family: 'Maven Pro', sans-serif;" class="text-danger">ТБВ-Веб</b></a>.
           </footer>
             <!-- ============================================================== -->
             <!-- End footer -->
