--- a/views/edit/memberView.ejs
+++ b/views/edit/memberView.ejs
@@ -534,7 +534,7 @@
              </div>
         </div>
            <footer class="footer text-center">
-                Сва права садржана <i  class="text-dark">ТодаБогдаВеб</i>  <a href="https://wrappixel.com">Види више</a>.
+                Сва права садржана <i  class="text-dark">ТБВ-Веб</i>  <a href="https://wrappixel.com">Види више</a>.
             </footer>
             <!-- ============================================================== -->
             <!-- End footer -->
