--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,10 @@
 					<div>
 						<img src="images/srce.jpg" width="300px" alt="Srce_Johanovo">
 					</div>
-					
+					<h6>Корисничко име:</h6>
+				 <p>demo</p>
+					<h6>Шифра:</h6>
+					<p>12345</p>
 					<div class="wrap-input100 validate-input m-t-85 m-b-35" data-validate = "Enter username">
 						<input class="input100" type="text" name="name">
 						<span class="focus-input100" data-placeholder="Корисник"></span>
