--- a/views/admin/adminClanarine.ejs
+++ b/views/admin/adminClanarine.ejs
@@ -94,7 +94,9 @@
                         <li class="nav-item search-box"> <a class="nav-link waves-effect waves-dark" href="javascript:void(0)"><i class="ti-search"></i></a>
                             <form class="app-search position-absolute">
                                 <input type="text" class="form-control" placeholder="Search &amp; enter"> <a class="srh-btn"><i class="ti-close"></i></a>
+                                <input type="submit">
                             </form>
+                          
                         </li>
                     </ul>
                     <!-- ============================================================== -->
@@ -443,6 +445,14 @@
     <script src="../../assets/libs/flot.tooltip/js/jquery.flot.tooltip.min.js"></script>
     <script src="../../dist/js/pages/chart/chart-page-init.js"></script>
 <script>
+    const wage = document.getElementById('wage');
+wage.addEventListener('keydown', (e) => {
+    if (e.key === 'Enter') {
+        validate(e);
+    }
+});
+
+
     $(".delete-cord").on('click', function(){
         let id = $(this).attr('data-id');
         let potvrda = confirm("Да ли сте сигурни да желите да избришете координатора?");
