--- a/views/table/work.ejs
+++ b/views/table/work.ejs
@@ -4,99 +4,128 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Table</title>
-    <style>
-        .box{
-            width:600px;
-            height:440px;
-            border:1px solid black;
-            margin:50px auto;
-        }
-        .newDiv{
-            width:100px;
-            height:40px;
-            line-height: 40px;
-            float:left;
-            box-sizing: border-box;
-            border:1px solid black;
-            text-align:center;
-        }
-        .btn{
-        border:1px solid brown;
-        background-color: maroon;
-        color:white;
-        padding: 1%;
-        text-decoration: none;
-        border-radius:5px;
-        }
-    </style>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <title>Formular za prijavu | Fondacija Srce Johanovo </title>
+    <link href="https://fonts.googleapis.com/css2?family=Lora&family=Montserrat:wght@300&family=Varela+Round&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@600&family=Lora&family=Montserrat:wght@300&family=Varela+Round&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<style>
+    .container{
+        border:1px solid black;
+        margin-top: 3%;
+    }
+    .picture{
+        border:1px solid black;
+        text-align: center;
+        height: 150px;
+    }
+    .title{
+        border:1px solid black;
+        text-align: center;
+        height: 150px;
+    }
+  
+</style>
 </head>
 <body>
-<div class="box">
-
+    <div class="container col-sm-10 offset-1">
+        <div class="top p-2">
+<div class="row">
+    <div class="col-sm-3">
+        <div class="picture">
+<h3>
+    Место <br> За <br> Вашу<br>  Фотографију
+</h3>
+        </div>
+    </div>
+    <div class="col-sm-9">
+        <div class="title">
+            <h1>
+Захтев за чланство у фондацију</h1> 
+<h1 class="text-danger">
+Срце Јоханово</h1>
+        </div>
+    </div>
 </div>
-<a href='http://46.101.118.4/table' class="btn btn-danger"> RESET</a>
-
-<script>
-    var box = document.querySelector('.box');
-    createTable();
-   var boxes = document.querySelectorAll('.newDiv');
-console.log(box);
-for (var i = 0; i<boxes.length; i++){
-    boxes[i].addEventListener('click', changeColor);
-    boxes[0].innerText = 'Ponedeljak';
-    boxes[0].style.background = 'white';
-    boxes[1].innerText = 'Utorak';
-    boxes[1].style.background = 'white';
-    boxes[2].innerText = 'Sreda';
-    boxes[2].style.background = 'white';
-    boxes[3].innerText = 'Cetvrtak';
-    boxes[3].style.background = 'white';
-    boxes[4].innerText = 'Petak';
-    boxes[4].style.background = 'white';
-    boxes[5].innerText = 'Subota';
-    boxes[5].style.background = 'white';
-    boxes[6].innerText = '8h-9h';
-    boxes[12].innerText = '9h-10h';
-    boxes[18].innerText = '10h-11h';
-    boxes[24].innerText = '11h-12h';
-    boxes[30].innerText = '12h-13h';
-    boxes[36].innerText = '13h-14h';
-    boxes[42].innerText = '14h-15h';
-    boxes[48].innerText = '15h-16h';
-    boxes[54].innerText = '16h-17h';
-    boxes[60].innerText = '17h-18h';
-    boxes[9].innerText = '8h-9h';
-    boxes[15].innerText = '9h-10h';
-    boxes[21].innerText = '10h-11h';
-    boxes[27].innerText = '11h-12h';
-    boxes[33].innerText = '12h-13h';
-    boxes[39].innerText = '13h-14h';
-    boxes[45].innerText = '14h-15h';
-    boxes[51].innerText = '15h-16h';
-    boxes[57].innerText = '16h-17h';
-    boxes[63].innerText = '17h-18h';
-}
-
-   function createTable(){
-       var text = '';
-       for(var i=0;i<66;i++){
-text += '<div class="newDiv"></div>';
-   }
-   box.innerHTML = text;
-   }
-   
-   function changeColor(){       
-if(this.value == true){
-    this.value = false;
-    this.style.background = 'green';
-}else{
-    this.value = true;
-    this.style.background = 'red';
-}
-console.log(this.value);
-}
-</script>
+</div>
+<hr>
+<h3  class="text-center font-weight-bold">
+    Лични подаци члана фондације:
+</h3>
+<hr>
+<table class="table table-bordered">
+    <thead>
+       
+    </thead>
+    <tbody>
+      <tr>
+        <td>Име и презиме</td>
+        <td>
+            <input type="text" style="width:100%">
+        </td>  </tr>
+      <tr>
+        <td>Име једног родитеља</td>
+       <td> <input type="text" style="width:100%"></td>
+    </tr>
+      <tr>
+        <td>Датум рођења</td>
+       <td> <input type="text" style="width:100%"></td>
+     </tr>
+     <tr>
+        <td>Место рођења</td>
+       <td> <input type="text" style="width:100%"></td>
+    </tr>
+      <tr>
+        <td>ЈМБГ</td>
+       <td> <input type="text" style="width:100%"></td>
+    </tr>
+      <tr>
+        <td>Број личне карте</td>
+       <td> <input type="text" style="width:100%"></td>
+     </tr>
+     <tr>
+        <td>Држављанство</td>
+       <td> <input type="text" style="width:100%"></td>
+    </tr>
+      <tr>
+        <td>Двојно држављанство(одабери)</td>
+       <td> <input type="text" style="width:100%"></td>
+    </tr>
+      <tr>
+        <td>Адреса становања</td>     <td> <input type="text" style="width:100%"></td>
+     </tr>
+     <tr>
+        <td>Занимање</td>
+       <td> <input type="text" style="width:100%"></td>
+    </tr>
+      <tr>
+        <td>Фиксни и мобилни телефон</td>
+       <td> <input type="text" style="width:100%"></td>
+    </tr>
+      <tr>
+        <td>Мејл адреса</td>
+       <td> <input type="text" style="width:100%"></td>
+     </tr>
+     <tr>
+        <td>До сада сам био/ла члан фондације(навести име)</td>
+       <td> <input type="text" style="width:100%"></td>
+    </tr>
+      <tr>
+        <td>Сада сам члан фондације (навести име)</td>
+       <td> <input type="text" style="width:100%"></td>
+     </tr>
+    </tbody>
+  </table>
+    </div>
 </body>
 </html>
