--- a/views/table/work.ejs
+++ b/views/table/work.ejs
@@ -1,131 +1,404 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Formular za prijavu | Fondacija Srce Johanovo </title>
-    <link href="https://fonts.googleapis.com/css2?family=Lora&family=Montserrat:wght@300&family=Varela+Round&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@600&family=Lora&family=Montserrat:wght@300&family=Varela+Round&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<style>
-    .container{
-        border:1px solid black;
-        margin-top: 3%;
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <title>Formular za prijavu | Fondacija Srce Johanovo </title>
+  <link href="https://fonts.googleapis.com/css2?family=Lora&family=Montserrat:wght@300&family=Varela+Round&display=swap"
+    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dosis:wght@600&family=Lora&family=Montserrat:wght@300&family=Varela+Round&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  <style>
+    .container {
+      border: 1px solid black;
+      margin-top: 3%;
     }
-    .picture{
-        border:1px solid black;
-        text-align: center;
-        height: 150px;
+
+    .picture {
+      border: 1px solid black;
+      text-align: center;
+      height: 150px;
     }
-    .title{
-        border:1px solid black;
-        text-align: center;
-        height: 150px;
+
+    .title {
+      border: 1px solid black;
+      text-align: center;
+      height: 150px;
     }
-  
-</style>
+
+    .one {
+      width: 50%;
+    }
+
+    .two {
+      width: 50%;
+    }
+  </style>
 </head>
+
 <body>
-    <div class="container col-sm-10 offset-1">
-        <div class="top p-2">
-<div class="row">
-    <div class="col-sm-3">
-        <div class="picture">
-<h3>
-    Место <br> За <br> Вашу<br>  Фотографију
-</h3>
+  <div class="container">
+    <div class="top p-2">
+      <div class="row">
+        <div class="col-sm-3">
+          <div class="picture">
+            <h3>
+              Место <br> За <br> Вашу<br> Фотографију
+            </h3>
+          </div>
         </div>
-    </div>
-    <div class="col-sm-9">
-        <div class="title">
+        <div class="col-sm-9">
+          <div class="title">
             <h1>
-Захтев за чланство у фондацију</h1> 
-<h1 class="text-danger">
-Срце Јоханово</h1>
+              Захтев за чланство у фондацију</h1>
+            <h1 class="text-danger">
+              Срце Јоханово</h1>
+          </div>
         </div>
+      </div>
     </div>
-</div>
-</div>
-<hr>
-<h3  class="text-center font-weight-bold">
-    Лични подаци члана фондације:
-</h3>
-<hr>
-<table class="table table-bordered">
-    <thead>
-       
-    </thead>
-    <tbody>
-      <tr>
-        <td>Име и презиме</td>
+    <hr>
+    <h3 class="text-center font-weight-bold">
+      Лични подаци члана фондације:
+    </h3>
+    <hr>
+    <table class=" table table-bordered">
+      <thead>
+
+      </thead>
+      <tbody>
+        <tr>
+          <td class="one">Име и презиме</td>
+          <td>
+            <input type="text" class="two" style="width:100%">
+          </td>
+        </tr>
+        <tr>
+          <td class="one">Име једног родитеља</td>
+          <td> <input type="text" class="two" style="width:100%"></td>
+        </tr>
+        <tr>
+          <td class="one">Датум рођења</td>
+          <td> <input type="text" class="two" style="width:100%"></td>
+        </tr>
+        <tr>
+          <td class="one">Место рођења</td>
+          <td> <input type="text" class="two" style="width:100%"></td>
+        </tr>
+        <tr>
+          <td class="one">ЈМБГ</td>
+          <td> <input type="text" class="two" style="width:100%"></td>
+        </tr>
+        <tr>
+          <td class="one">Број личне карте</td>
+          <td> <input type="text" class="two" style="width:100%"></td>
+        </tr>
+        <tr>
+          <td class="one">Држављанство</td>
+          <td> <input type="text" class="two" style="width:100%"></td>
+        </tr>
+        <tr>
+          <td class="one">Двојно држављанство <br> (одабери)</td>
+          <td> <input type="text" class="two" style="width:100%"></td>
+        </tr>
+        <tr>
+          <td class="one">Адреса становања</td>
+          <td> <input type="text" style="width:100%"></td>
+        </tr>
+        <tr>
+          <td class="one">Занимање</td>
+          <td> <input type="text" class="two" style="width:100%"></td>
+        </tr>
+        <tr>
+          <td class="one">Фиксни и мобилни телефон</td>
+          <td> <input type="text" style="width:100%"></td>
+        </tr>
+        <tr>
+          <td class="one">Мејл адреса</td>
+          <td> <input type="text" class="two" style="width:100%"></td>
+        </tr>
+        <tr>
+          <td class="one">До сада сам био/ла члан <br> фондације (навести име)</td>
+          <td> <input type="text" class="two" style="width:100%"></td>
+        </tr>
+        <tr>
+          <td class="one">Сада сам члан фондације <br /> (навести име)</td>
+          <td> <input type="text" class="two" style="width:100%"></td>
+        </tr>
+      </tbody>
+    </table>
+    <hr>
+    <table class=" table table-bordered">
+
+      <tbody>
+        <tr>
+          <td class="one">Погодности за чланове</td>
+          <td>
+            Желим да као члан приступим секцији
+            (заокружити само једну)
+          </td>
+        </tr>
+        <td class="one">сви чланови фондације имају право бесплатно да присуствују свим догађајима које организује
+          фондација, могу бити учесници у програму фондације, аутоматски су чланови одабране секције где добијају
+          потребна обавештења. Могу бесплатно присуствовати семинарима и предавањима које фондација организује за
+          чланове а тиче се неких од наведених секција. На свим путовањима имаће умањену цену и још много погодности.
+          Својим радом и залагањем члан фондације може постати волонтер, координатор акција и може бити запослен у самој
+          фондацији.
+        </td>
         <td>
+          <form class="" action="/action_page.php">
+
+              <input type="radio" id="music" name="fav_music" value="music">
+              <label for="html">Музичка секција</label><br>
+              <input type="radio" id="css" name="fav_language" value="CSS">
+              <label for="css">Спортска секција</label><br>
+              <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+              <label for="javascript">Еколошка секција</label> <br>
+              <input type="radio" id="html" name="fav_language" value="HTML">
+              <label for="html">Грађевинска секција</label><br>
+              <input type="radio" id="css" name="fav_language" value="CSS">
+              <label for="css">Књижевно-драмска секција</label><br>
+              <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+              <label for="javascript">Уметничка секција</label> <br>
+              <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+              <label for="javascript">Уметничка секција</label>
+          </form>
+        </td>
+        </tr>
+        <td class="one">Написати колико сати месечно можете временски да се посветите волонтирању у фондацији.</td>
+        <td>
+          <input type="number" class="two" style="width:15%">
+        </td>
+        </tr>
+      </tbody>
+    </table>
+    <hr>
+    <table class=" table table-bordered">
+
+      <tbody>
+        <tr>
+          <td class="one">МЕСТО</td>
+          <td>
             <input type="text" style="width:100%">
-        </td>  </tr>
-      <tr>
-        <td>Име једног родитеља</td>
-       <td> <input type="text" style="width:100%"></td>
-    </tr>
-      <tr>
-        <td>Датум рођења</td>
-       <td> <input type="text" style="width:100%"></td>
-     </tr>
-     <tr>
-        <td>Место рођења</td>
-       <td> <input type="text" style="width:100%"></td>
-    </tr>
-      <tr>
-        <td>ЈМБГ</td>
-       <td> <input type="text" style="width:100%"></td>
-    </tr>
-      <tr>
-        <td>Број личне карте</td>
-       <td> <input type="text" style="width:100%"></td>
-     </tr>
-     <tr>
-        <td>Држављанство</td>
-       <td> <input type="text" style="width:100%"></td>
-    </tr>
-      <tr>
-        <td>Двојно држављанство(одабери)</td>
-       <td> <input type="text" style="width:100%"></td>
-    </tr>
-      <tr>
-        <td>Адреса становања</td>     <td> <input type="text" style="width:100%"></td>
-     </tr>
-     <tr>
-        <td>Занимање</td>
-       <td> <input type="text" style="width:100%"></td>
-    </tr>
-      <tr>
-        <td>Фиксни и мобилни телефон</td>
-       <td> <input type="text" style="width:100%"></td>
-    </tr>
-      <tr>
-        <td>Мејл адреса</td>
-       <td> <input type="text" style="width:100%"></td>
-     </tr>
-     <tr>
-        <td>До сада сам био/ла члан фондације(навести име)</td>
-       <td> <input type="text" style="width:100%"></td>
-    </tr>
-      <tr>
-        <td>Сада сам члан фондације (навести име)</td>
-       <td> <input type="text" style="width:100%"></td>
-     </tr>
-    </tbody>
-  </table>
-    </div>
+          </td>
+        </tr>
+        <tr>
+          <td class="one">ДАТУМ</td>
+          <td>
+            <input type="text" style="width:100%">
+          </td>
+        </tr>
+        <tr>
+          <td class="one">НИСАМ РОБОТ <br> (унети текст)</td>
+          <td>
+            <i>СРЦЕ ЈОХАНОВО</i> <input type="text" style="width:100%">
+          </td>
+        </tr>
+
+      </tbody>
+
+    </table>
+    <i class="font-weight-bold">
+      *Попуњавем празних поља подносилац захтева за чланство у фондацији потврђује исправност унетих података. За
+      неисправно унете податке или уношење нетачних података овлашћени заступник фондације подлеже одредбама
+      Дисциплинског Правилника Фондације Срце Јоханово.
+
+    </i>
+    <table class="table table-bordered mt-5">
+      <thead>
+        <th class="text-center">ЗА ЧЛАНОВЕ МЛАЂЕ ОД 18 ГОДИНА </th>
+        <th>(попуњавају оба родитеља/старатеља) *ОБАВЕЗНО*</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="one">Име и презиме</td>
+          <td>
+            <input type="text" class="two" style="width:100%">
+          </td>
+        </tr>
+        <tr>
+          <td class="one">Фиксни телефон</td>
+          <td> <input type="text" class="two" style="width:100%"></td>
+        </tr>
+        <tr>
+          <td class="one">Мобилни телефон</td>
+          <td> <input type="text" class="two" style="width:100%"></td>
+        </tr>
+        <tr>
+          <td class="one">Имејл адреса</td>
+          <td> <input type="text" class="two" style="width:100%"></td>
+        </tr>
+        <tr>
+          <td class="one">Адреса становања</td>
+          <td> <input type="text" class="two" style="width:100%"></td>
+        </tr>
+        <td class="one">Сагласни смо да се наше дете учлани у фондацију Срце Јоханово</td>
+
+        </tr>
+        <tr>
+          <td class="one">ПОТВРДА ОЦА</td>
+          <td class="text-center">
+            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+              <label for="javascript">ДА</label>
+              <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+              <label for="javascript">НЕ</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="one">ПОТВРДА МАЈКЕ</td>
+          <td class="text-center">
+            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+              <label for="javascript">ДА</label>
+              <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+              <label for="javascript">НЕ</label>
+          </td>
+        </tr>
+
+      </tbody>
+    </table>
+    <table class="table table-bordered mt-5">
+      <thead>
+        <th class="text-center">
+          УВЕДЕН У КЊИГУ ЧЛАНОВА ФОНДАЦИЈЕ СРЦЕ ЈОХАНОВО
+        </th>
+        <th>(попуњава фондација)</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="one">Фондација</td>
+          <td>
+            СРЦЕ ЈОХАНОВО </td>
+        </tr>
+        <tr>
+          <td class="one">Место фондације</td>
+          <td>
+            ЗРЕЊАНИН </td>
+        </tr>
+        <tr>
+          <td class="one">РЕДОВНИ ЧЛАН</td>
+          <td>
+            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+              <label for="javascript">ДА</label>
+              <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+              <label for="javascript">НЕ</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="one">ПОМАЖУЋИ ЧЛАН(ВОЛОНТЕР)</td>
+          <td>
+            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+              <label for="javascript">ДА</label>
+              <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+              <label for="javascript">НЕ</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="one">ПОЧАСНИ ЧЛАН</td>
+          <td>
+            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+              <label for="javascript">ДА</label>
+              <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+              <label for="javascript">НЕ</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="one">ЗАВЕДЕН ПОД БРОЈЕМ</td>
+          <td>
+            <input type="number">
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <table class="table table-bordered mt-5">
+      <thead>
+        <th class="text-center">
+          ТАЧНОСТ НАВЕДЕНИХ ПОДАТАКА ПОТВРЂУЈУ
+        </th>
+        <th>(попуњава фондација)</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="one">ОВЛАШЋЕНО ЛИЦЕ ФОНДАЦИЈЕ</td>
+          <td>
+            <input type="text" class="two" style="width:100%">
+          </td>
+        </tr>
+        <tr>
+        <tr>
+          <td class="one">МЕСТО
+          </td>
+          <td>
+            ЗРЕЊАНИН
+          </td>
+        </tr>
+        <tr>
+          <td class="one">ДАТУМ
+
+            <input type="text" class="two" style="width:100%">
+          </td>
+          <td>Лого фондације</td>
+        </tr>
+
+        </tr>
+        <tr>
+          <td class="one">НИСАМ РОБОТ <br> (унети текст)</td>
+          <td>
+            <i>СРЦЕ ЈОХАНОВО</i> <input type="text" style="width:100%">
+          </td>
+        </tr>
+        </tbody>
+        </table>
+        <div class="wrap ">
+          <i class="font-weight-bold">
+            *Попуњавањем празних поља овлашћени заступник фондације потврђује исправност унетих података. За неисправно унете
+            податке или уношење нетачних података овлашћени заступник фондације подлеже одредбама Дисциплинског Правилника
+            Фондације Срце Јоханово.
+          </i>
+         
+        </div>
+        <div class="request ">
+          <h3 style="text-decoration: underline;">Потребна документа уз захтев:</h3>
+          <ul>
+            <li>очитана лична карта
+              <input type="file" accept="image/*" />
+            </li>
+            <li>очитана здравствена књижица
+              <input type="file" accept="image/*" />
+            </li>
+            <li>фотографија
+              <input type="file" accept="image/*" />
+            </li>
+            <li>доказ о уплати годишње чланарине(1200 динара)
+              <input type="file" accept="image/*" />
+
+            </li>
+          </ul>
+        </div>
+       
+  </div>
+
 </body>
+
 </html>
